@@ -5,6 +5,12 @@
   <artifactId>risingwave-udf</artifactId>
   <packaging>jar</packaging>
   <version>0.0.1</version>
+  <parent>
+    <artifactId>java-parent</artifactId>
+    <groupId>com.risingwave.java</groupId>
+    <version>1.0-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
+  </parent>
   <name>risingwave-udf</name>
   <url>http://maven.apache.org</url>
 
@@ -54,42 +60,5 @@
         <version>1.7.0</version>
       </extension>
     </extensions>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M7</version>
-        <configuration>
-          <argLine>--add-opens=java.base/java.nio=ALL-UNNAMED</argLine>
-        </configuration>
-      </plugin>
-      <!-- generate an executable for examples -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <version>3.4.2</version>
-        <configuration>
-          <archive>
-            <manifest>
-              <mainClass>com.risingwave.functions.example.UdfExample</mainClass>
-            </manifest>
-          </archive>
-          <descriptorRefs>
-            <descriptorRef>jar-with-dependencies</descriptorRef>
-          </descriptorRefs>
-          <finalName>risingwave-udf-example</finalName>
-          <appendAssemblyId>false</appendAssemblyId>
-        </configuration>
-        <executions>
-          <execution>
-            <id>udf-example</id>
-            <phase>package</phase>
-            <goals>
-              <goal>single</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
   </build>
 </project>
